Added autoloader to composer.json and namespace to class

--- a/composer.json
+++ b/composer.json
@@ -9,5 +9,10 @@
             "email": "arunfairy@hotmail.com",
             "role": "Developer"
         }
-    ]
+    ],
+    "autoload": {
+        "psr-0": {
+            "Arielcr": "rest.inc.php"
+        }
+    }
 }
